# adequate-api-cpp

./: .dockerignore  .env.example  .env.test  .env.test.example  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.prod  LICENSE.MD  Makefile  README.md  docker-compose.e2e.yaml  docker-compose.prod.yaml  docker-compose.yaml
build-local/: CMakeCache.txt
config/: config.dev.json  config.prod.json
docker/app_build/: Dockerfile
docker/e2e/app_build/: Dockerfile
docker/e2e/nginx/: Dockerfile  default.test.conf
docker/nginx/: default.conf
docs/: 404.html  index.html  manifest.webmanifest  robots.txt  sitemap.xml
docs/assets/: style.css
migrations/: 0001_users.down.sql  0001_users.up.sql
public/openapi/: index.html  swagger.json
src/: main.cpp
src/controllers/: Health.cpp  HealthController.cpp  HealthController.h  UsersController.cpp  UsersController.h
src/controllers/auth/: AuthenticationController.cpp  AuthenticationController.h
src/core/: Bootstrap.h  bootstrap.cpp
src/core/cache/: CacheInterface.h
src/core/caching/interfaces/: CacheInterface.h
src/core/configs/: EnvConfig.cpp  EnvConfig.h
src/core/db/postgres/: ChannelHelper.h  PgConnection.cpp  PgPool.cpp  Transaction.cpp
src/core/db/postgres/builder/: SQLBuilder.h  SQLSelectBuilder.h
src/core/db/postgres/interfaces/: PgConnection.h  PgPool.h  PgTypes.h  Transaction.h
src/core/errors/: Errors.h
src/core/file_system/: FileSystemService.cpp  FileSystemService.h
src/core/file_system/errors/: FileSystemErrors.h
src/core/file_system/magic_mime/: MagicMimeDetector.cpp  MagicMimeDetector.h
src/core/filters/: BaseFilter.cpp  BaseFilter.h
src/core/filters/interfaces/: FiltersInterface.h
src/core/hashers/: SodiumPasswordHasher.h
src/core/hashers/interfaces/: PasswordHasherInterface.h
src/core/helpers/: Offload.h
src/core/http/: ResponseTypes.h
src/core/http/interfaces/: HttpInterface.h
src/core/interfaces/: DbInterface.h  EntityInterface.h  FiltersInterface.h  HttpInterface.h  MiddlewareInterface.h  MultipartAdapterInterface.h  SerializerInterface.h
src/core/loggers/: LoggerFactory.h  LoggerInterface.h  LoggerSingleton.h
src/core/loggers/strategies/: ConsoleLoggerStrategy.h
src/core/multipart/: MultipartAdapterFactory.h
src/core/multipart/adapters/: POCOMultipartAdapter.cpp  POCOMultipartAdapter.h
src/core/openapi/: OpenApiBuilder.h  OpenApiParamBuilder.h  OpenApiRegistrar.h
src/core/openapi/controllers/: SwaggerController.cpp  SwaggerController.h
src/core/openapi/filters/: SwaggerFilter.h
src/core/openapi/services/: SwaggerService.h
src/core/openapi/specs/: OpenApiSchemaSpec.h
src/core/openapi/templates/: swagger.html
src/core/openapi/types/: OpenApiMeta.h  OpenApiResponses.h  OpenApiSchemaRegistry.h  OpenApiTypes.h
src/core/renderers/: HtmlRenderer.cpp  HtmlRenderer.h  JsonRenderer.cpp  JsonRenderer.h
src/core/renderers/interfaces/: RendererInterface.h
src/core/renderers/json/: JsonRenderer.cpp  JsonRenderer.h
src/core/repositories/: BaseRepository.h
src/core/request/: Request.h
src/core/response/: Response.h
src/core/routers/: Router.cpp  Router.h
src/core/serializers/: BaseSerializer.h
src/di/: AppContext.cpp  AppContext.h
src/entities/: TokenPairEntity.h  UserEntity.h
src/filters/users/: UserFilter.h  UserListFilter.h
src/helpers/: DatetimeConverter.h
src/middlewares/: AuthenticationMiddleware.cpp  AuthenticationMiddleware.h
src/repositories/: BaseRepository.cpp  BaseRepository.h
src/repositories/users/: UsersRepository.cpp  UsersRepository.h
src/routes/: Routes.cpp  Routes.h
src/serializers/auth/: LoginSerializer.h  RegisterSerializer.h  TokenResponseSerializer.h
src/serializers/users/: UserCreateSerializer.h  UserSerializer.cpp  UserSerializer.h  UserUpdateSerializer.h
src/services/auth/: AuthenticationService.cpp  AuthenticationService.h
src/services/jwt/: JwtService.cpp  JwtService.h
src/services/users/: UsersService.cpp  UsersService.h  UsersServiceInterface.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  main.cpp
tests/e2e/api/: Health.test.cpp
tests/e2e/api/Health/: Health.test.cpp  HealthCheckClient.h  HealthResponse.h
tests/e2e/api/Users/: Users.test.cpp  UsersClient.h  UsersResponse.h
tests/e2e/auth/: AuthClient.h  AuthSession.h
tests/e2e/base/: E2EEnvironment.h  TestHTTPClient.h
